--- a/style.css
+++ b/style.css
@@ -34,33 +34,33 @@ nav {
   font-weight: bold;
 }
 
-.nav-links {
-  display: flex;
-  gap: 20px;
-}
-
 .nav-links a {
   color: white;
   text-decoration: none;
+  margin-left: 20px;
 }
 
 .main-content {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-top: 20px;
+  justify-content: space-between;
+  align-items: center;
+  height: 80vh;
 }
 
 .main-content h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
+  width: 30%;
+  font-family: "Roboto Mono", "Courier New", monospace;
 }
 
 .text-content {
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .text-content p {
+  width: 50%;
+  font-family: "Roboto Mono", "Courier New", monospace;
   font-size: 18px;
   line-height: 1.6;
   color: #cccccc;
@@ -81,18 +81,29 @@ nav {
   text-decoration: none;
 }
 
+h1 {
+  font-size: 48px;
+  margin-bottom: 20px;
+}
+
+/* 在现有的 CSS 后添加以下样式 */
+
 section {
-  width: 100%;
-  margin-top: 40px;
+  flex-wrap: nowrap;
+  margin-top: -10rem;
+  display: flex;
+  margin-bottom: 3em;
 }
 
 section h2 {
+  width: 30%;
   color: #ffd700;
   font-size: 1.5em;
   margin-bottom: 0.5em;
 }
 
 #research-interests p {
+  width: 55%;
   color: #cccccc;
   line-height: 1.6;
   margin-bottom: 1em;
@@ -111,12 +122,20 @@ section h2 {
 }
 
 #publications {
+  display: flex;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
+#publications h2 {
+  width: 30%;
+  color: rgb(93, 191, 157);
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
 .publications-list {
-  width: 100%;
+  width: 70%;
 }
 
 .publication-item {
@@ -145,6 +164,8 @@ section h2 {
 }
 
 #news {
+  display: flex;
+  flex-direction: column;
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
@@ -166,22 +187,20 @@ section h2 {
   margin: 0;
   font-size: 1em;
 }
-
-.news-item a {
+.news-item a{
   color: #ffd700;
   text-decoration: none;
   transition: all 0.3s ease;
 }
-
 .news-item a:hover {
   text-decoration: underline;
 }
-
 .contact-info {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 2rem;
+  margin-bottom: -8rem;
+  margin-left: 4rem;
 }
 
 .location,
@@ -252,23 +271,30 @@ footer a {
   }
 
   .main-content h1 {
-      text-align: center;
-      font-size: 36px;
+      display: none;
+  }
+
+  .text-content {
+      width: 100%;
+      text-align: left;
   }
 
   .text-content p {
-      text-align: center;
+      text-align: left;
       font-size: 16px;
   }
 
   section {
+      width: 100%;
       align-items: center;
       display: flex;
       flex-direction: column;
+      text-align: left;
   }
 
   section h2 {
-      text-align: center;
+      width: 100%;
+      text-align: left;
   }
 
   #research-interests,
@@ -277,26 +303,28 @@ footer a {
   .publications-list,
   .news-list {
       width: 100%;
-      align-items: center;
+      align-items: flex-start;
   }
 
   .publication-item,
   .news-item {
-      text-align: center;
+      text-align: left;
   }
 
   .contact-info {
-      align-items: center;
+      align-items: flex-start;
+      margin-left: 0;
   }
 
   .location,
   .affiliation {
-      justify-content: center;
+      justify-content: flex-start;
       width: 100%;
   }
 
   .social-links {
-      justify-content: center;
+      justify-content: flex-start;
       width: 100%;
   }
 }
+
