--- a/style.css
+++ b/style.css
@@ -275,7 +275,10 @@ footer a {
   }
 
   .main-content h1 {
-      display: none;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    font-size: 20px;
   }
 
   .text-content {
