--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav {
 }
 
 .main-content h1 {
+  font-weight: bolder;
   width: 30%;
   font-family: "Roboto Mono", "Courier New", monospace;
 }
@@ -63,6 +64,7 @@ nav {
 }
 
 .text-content p {
+  font-weight: bolder;
   width: 50%;
   font-family: "Roboto Mono", "Courier New", monospace;
   font-size: 18px;
@@ -101,12 +103,15 @@ section {
 
 section h2 {
   width: 30%;
+  font-weight: bolder;
   color: #ffd700;
   font-size: 1.5em;
   margin-bottom: 0.5em;
 }
 
 #research-interests p {
+  font-weight: bolder;
+  font-size: large;
   width: 55%;
   color: #cccccc;
   line-height: 1.6;
@@ -250,28 +255,28 @@ footer a {
 /* 媒体查询：适应手机屏幕大小 */
 @media (max-width: 768px) {
   .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
   }
 
   nav {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .nav-links {
-      flex-direction: column;
-      gap: 10px;
+    flex-direction: column;
+    gap: 10px;
   }
 
   .main-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: auto;
   }
 
   .main-content h1 {
@@ -282,69 +287,70 @@ footer a {
   }
 
   .text-content {
-      width: 100%;
-      text-align: left;
-      padding: 0 10px;
+    width: 100%;
+    text-align: left;
+    padding: 0 10px;
   }
 
   .text-content p {
-      text-align: left;
-      font-size: 16px;
-      width: 100%;
+    font-weight: bolder;
+    text-align: left;
+    font-size: 16px;
+    width: 100%;
   }
 
   section {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      text-align: left;
-      margin-top: 0;
-      margin-bottom: 2em;
-      padding: 0 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 2em;
+    padding: 0 10px;
   }
 
   section h2 {
-      width: 100%;
-      text-align: left;
+    width: 100%;
+    text-align: left;
   }
 
   #research-interests p,
   #publications .publication-item p,
   #news .news-item p {
-      width: 100%;
+    width: 100%;
   }
 
   .publications-list,
   .news-list {
-      width: 100%;
-      align-items: flex-start;
+    width: 100%;
+    align-items: flex-start;
   }
 
   .publication-item,
   .news-item {
-      text-align: left;
+    text-align: left;
   }
 
   .contact-info {
-      align-items: center;
-      width: 100%;
-      text-align: center;
-      margin-left: 0;
-      margin-bottom: 0;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+    margin-left: 0;
+    margin-bottom: 0;
   }
 
   .location,
   .affiliation {
-      justify-content: center;
-      width: 100%;
+    justify-content: center;
+    width: 100%;
   }
 
   .social-links {
-      justify-content: center;
-      width: 100%;
+    justify-content: center;
+    width: 100%;
   }
 
   footer {
-      text-align: center;
+    text-align: center;
   }
 }
