--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ section h2 {
   margin-left: 22.4rem;
 }
 .publications-list-2 a {
-  color: #ffffff;
+  color: rgb(249, 216, 73);
   text-decoration: none;
   margin-right: 1rem;
 }
@@ -262,7 +262,7 @@ section h2 {
 }
 
 .publications-list a {
-  color: #ffffff;
+  color: rgb(249, 216, 73);
   text-decoration: none;
   margin-right: 1rem;
 }
