--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --bg-color: #0a192f;
   --text-color: #e6f1ff;
-  --accent-color: #64ffda;
+  --accent-color: #38ffe5;
   --secondary-color: #e9eeff;
   --tertiary-color: #112240;
   --transition: all 0.3s ease;
@@ -110,7 +110,7 @@ p {
   border-radius: 50%;
   object-fit: cover;
   margin-bottom: 30px;
-  border: 3px solid var(--accent-color);
+  border: 2px solid var(--accent-color);
   transition: var(--transition);
 }
 
