--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ p {
   object-fit: cover;
   margin-bottom: 30px;
   transition: all 0.4s ease;
-  border: 3px solid #ffbc3e;
+  border: 3px solid #ffffff;
   box-shadow: 0 0 20px rgba(0, 86, 179, 0.15);
   position: relative;
   z-index: 1;
