--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: 'Courier New', monospace;
+  font-family:Georgia, 'Times New Roman', Times, serif;
   background-color: var(--background-color);
   color: var(--text-color);
   line-height: 1.6;
@@ -65,8 +65,8 @@ a:hover {
 
 
 p {
-  font-family: 'Courier New', monospace;
-  font-weight: 800;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+  font-weight: 100;
   margin-bottom: 1rem;
 }
 
