--- a/style.css
+++ b/style.css
@@ -102,12 +102,12 @@ h2 {
 }
 
 .btn-primary {
-  background-color: #f5d2d1;
+  background-color: #f8d8b0;
   color: var(--primary-color);
 }
 
 .btn-secondary {
-  background-color: #f5d2d1;
+  background-color:#f8d8b0;
   color: var(--primary-color);
 }
 
