--- a/style.css
+++ b/style.css
@@ -229,16 +229,16 @@ h2 {
 
 .publication-image img {
   width: 100%;
-  height: auto;
+  height: 200px;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   transition: transform 0.5s;
 }
 
-.publication-image img:hover {
+/* .publication-image img:hover {
   transform: scale(1.02);
-}
+} */
 
 .publication-info {
   flex: 1;
